# aoc-solutions

./: README.md  flake.nix  haskell-template.cabal
src/: D1.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  D2.hs  D21.hs  D22  D22.hs  D22Lines.hs  D23.hs  D24.hs  D25.hs  D3.hs  D4.hs  D5.hs  D6.hs  D7.hs  D8.hs  D9.hs  MonadTut.hs  output-13.txt
