cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0
license:            MIT
copyright:          Bhavit Sharma
maintainer:         bhavit.sharma804@gmail.com
author:             Bhavit Sharma
category:           Web

extra-source-files:
  README.md

executable haskell-template
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , lens
    , megaparsec
    , monad-logger
    , mtl
    , neat-interpolation
    , profunctors
    , relude
    , shower
    , tagged
    , text
    , time
    , unliftio
    , with-utf8
    , parsec
    , transformers
    , vector
    , containers
    , heap
    , vector-algorithms
    , split
    , array

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
